<resources>
    <string name="app_name">Quản lý Tour</string>
    <string name="tv_Card">TextView</string>
    <string name="tv_Name">TextView</string>
    <string name="tv_Tour">TextView</string>
    <string name="img_PDK">img_PDK</string>
    <string name="phi_u_ng_k">Phiếu Đăng Ký</string>
    <string name="img_btn_create">img_PDK</string>
    <string name="img_btn_delete">Delete</string>
    <string name="ng_k_tour">Tour</string>
    <string name="ng_k_kh">Khách Hàng</string>
    <string name="qu_n_l_tour">Quản Lý Tour</string>
    <string name="btn_createTour">btn_createTour</string>
    <string name="h_nh_tr_nh">Hành Trình</string>
    <string name="gi_tour">Giá Tour</string>
    <string name="img_tour">img_tour</string>
    <string name="address">address</string>
    <string name="th_ng">Thăng</string>
    <string name="img_user">da</string>
    <string name="ng_k_kh_ch_h_ng">Quản Lý Khách Hàng</string>
    <string name="kh_i_t_o_kh_ch_h_ng">Khởi tạo Khách Hàng</string>
    <string name="t_n_kh_ch_h_ng">Tên Khách Hàng:</string>
    <string name="a_ch">Địa Chỉ</string>
    <string name="nh_p_a_ch_v_o_y">Nhập Địa Chỉ Vào Đây</string>
    <string name="nh_p_t_n_v_o_y">Nhập Tên Vào Đây</string>
    <string name="save">Lưu Tất Cả Thông Tin</string>
    <string name="TKH">Tên Khách Hàng</string>
    <string name="nh_p_t_n_kh_ch_h_ng">Nhập Tên Khách Hàng</string>
    <string name="DCKH">Địa Chỉ Khách Hàng</string>
    <string name="NDC">Nhập Địa Chỉ</string>
    <string name="kh_i_t_o_tour">Khởi tạo Tour</string>
    <string name="LT">Lộ Trình</string>
    <string name="NLT">Nhập Lộ Trình</string>
    <string name="NHT">Nhập Hành Trình</string>
    <string name="NGT">Nhập Giá Tour</string>
    <string name="imgKH">Img Khách Hàng</string>
    <string name="th_m_img">Thêm Img</string>
    <string name="h_y_img">Hủy Img</string>
    <string name="th_ng_tin_kh_ch_h_ng">Thông Tin Khách Hàng</string>
    <string name="PlainTKH">Tên Khách Hàng</string>
    <string name="PlainDCKH">Địa Chỉ Khách Hàng</string>
    <string name="S">Sửa</string>
    <string name="update">update</string>
    <string name="fix">fix</string>
    <string name="th_m_nh">Thêm Ảnh</string>
    <string name="th_ng_tin_tour">Thông Tin Tour</string>
    <string name="l_tr_nh">Lộ Trình</string>
    <string name="nh_p_l_tr_nh">Nhập Lộ Trình</string>
    <string name="HT">Hành Trình</string>
    <string name="nh_p_h_nh_tr_nh">Nhập Hành Trình</string>
    <string name="GT">Giá Tour</string>
    <string name="vn">VNĐ</string>
    <string name="nh_p_gi_tour">Nhập Giá Tour</string>
    <string name="s_a">Sửa</string>
    <string name="b1">B1</string>
    <string name="t_o_phi_u_ng_k">Tạo Phiếu Đăng Ký</string>
    <string name="ngaydangky">Ngày Đăng Ký</string>
    <string name="nh_p_ng_y_ng_k">Nhập Ngày Đăng Ký</string>
    <string name="m_kh_ch_h_ng">Mã Khách Hàng</string>
    <string name="qua_b_c_k_t_th_c">Xác Nhận</string>
    <string name="text">text</string>
    <string name="spinnerkh">SpinnerKH</string>
    <string name="transfer">transfer</string>
    <string name="registerform">registerform</string>
    <string name="date">Date</string>
    <string name="c_c_tour">Các Tour</string>
    <string name="s_ng_i">Số Người</string>
    <string name="nh_p_s_ng_i">Nhập Số Người</string>
    <string name="tour_img">tour img</string>
    <string name="textview">TextView</string>
    <string name="ng_y_ng_k">Ngày Đăng Ký</string>
    <string name="sua">sua</string>
    <string name="s_a_phi_u_dk">Sửa Phiếu DK</string>
    <string name="btn_transfer">btn_Transfer</string>
    <string name="s_phi_u_ng_k">Số Phiếu Đăng Ký</string>
    <string name="live_to_travel">Live To Travel</string>
    <string name="s_phi_u">Số Phiếu:</string>
    <string name="b_n_th_ng_k">Bản Thống Kê</string>
    <string name="th_ng_k">Thống Kê</string>
</resources>
