<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".Views.Information_customer">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/th_ng_tin_kh_ch_h_ng"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/TKH"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/tv_TenKH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/PlainTKH"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/DCKH"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/tv_DiaChiKH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/PlainDCKH"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/img_KH"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/imgKH"
        app:srcCompat="@drawable/emptypicture" />

    <Button
        android:id="@+id/btn_ThemAnh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/th_m_nh" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_phi_u_ng_k"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/lv_SoPhieu"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtn_Fix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="#00000000"
            android:contentDescription="@string/fix"
            app:srcCompat="@drawable/update" />
    </LinearLayout>

</LinearLayout>