<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.Information_PhieuDK"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/s_a_phi_u_dk"
        android:textColor="@color/vien"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView

        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ng_y_ng_k"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/Liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_NgayDK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_Date"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_calendar" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_kh_ch_h_ng"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_MaKH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_c_tour"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_MaTour2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_ng_i"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_SoNguoi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nh_p_s_ng_i"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_marginTop="20dp"
            android:id="@+id/img_sua"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:background="@drawable/ic_update"
            android:contentDescription="@string/s_a"/>
    </LinearLayout>
</LinearLayout>