<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ImageView
        android:id="@+id/img_tour"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_weight="0"
        android:contentDescription="@string/img_btn_delete"
        app:srcCompat="@drawable/tourism" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_LoTrinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_tr_nh" />

        <TextView
            android:id="@+id/tv_HanhTrinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/h_nh_tr_nh" />

        <TextView
            android:id="@+id/tv_GiaTour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gi_tour" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_Transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_weight="0"
        android:background="#00000000"
        android:contentDescription="@string/btn_transfer"
        app:srcCompat="@drawable/arrow"
        android:layout_marginEnd="12dp" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#00FFFFFF"
        android:contentDescription="@string/img_btn_delete"
        app:srcCompat="@drawable/delete" />

</LinearLayout>