<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.B1TaoPhieuDK">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/t_o_phi_u_ng_k"
        android:textColor="@color/vien"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="20dp" />


    <TextView
        android:id="@+id/textView21"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ng_y_ng_k"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/Liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_NgayDK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_Date"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_calendar" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_kh_ch_h_ng"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/sp_MaKH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_c_tour"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/sp_MaTour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_ng_i"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/et_SoNguoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nh_p_s_ng_i"
        android:inputType="number" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_QuaBuoc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_confirm"
        android:layout_gravity="center"/>

</LinearLayout>